--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
 
+:root {
+    --font-family: 'Inter';
+    --box-shadow-position: 1px 2px 10px;
+    --transition: 200ms ease;
+}
+
 html, body {
     padding: 0;
     margin: 0;
     min-height: 100%;
     height: 0;
     background: #3a4652;
+    font-family: var(--font-family);
 }
 
