--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ html, body {
     margin: 0;
     min-height: 100%;
     height: 0;
-    background: #3a4652;
+    background: #425859;
     font-family: var(--font-family);
 }
 
